cabal-version:      2.4
name:               wordpuzzle
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Thayne Batty
maintainer:         tsbattman@icloud.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Puzzle.Words
      , Puzzle.SpellingBee
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0
      , containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable wordpuzzle
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0
      , wordpuzzle
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite wordpuzzle-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
